Some functions for merging not in grid